apps/aegis-meridian/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aegis-meridian
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: aegis
    homelab.local/OwnedBy: ElPoshoX
